--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,18 @@
   "name": "frontend",
   "version": "1.0.0",
   "private": true,
-  "author": ["Vincent Ugrai", "Lukas Pietschman", "Johannes Schenker", "Leon Schugk", "Johannes Wimmer"],
+  "author": [
+    "Vincent Ugrai",
+    "Lukas Pietschman",
+    "Johannes Schenker",
+    "Leon Schugk",
+    "Johannes Wimmer"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
