--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "Johannes Wimmer"
   ],
   "dependencies": {
+    "@azure/storage-blob": "^12.5.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
