--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,52 @@
+#Author: Johannes Wimmer
+
 version: "3.9"
-services: 
+services:
     frontend:
-        build: 
+        build:
             context: ./frontend
             dockerfile: Dockerfile
-        ports: 
+        ports:
             -   "80:3000"
         restart: unless-stopped
 
     wikihow:
-        build: 
+        build:
             context: backend
             dockerfile: ./services/WikiHow Service/Dockerfile
-        ports: 
+        ports:
             -   ${WIKI_HOW_PORT}:${WIKI_HOW_PORT}
         restart: unless-stopped
 
     training:
-        build: 
+        build:
             context: backend
             dockerfile: ./services/Training Service/Dockerfile
-        ports: 
+        ports:
             -   ${WORKOUT_PORT}:${WORKOUT_PORT}
         restart: unless-stopped
         stdin_open: true
         tty: true
 
     eventpublisher:
-        build: 
+        build:
             context: backend
             dockerfile: ./services/EventPublisher/Dockerfile
-        ports: 
+        ports:
             -   ${WEBSOCKET_PORT}:${WEBSOCKET_PORT}
         restart: unless-stopped
 
     accountservice:
-        build: 
+        build:
             context: backend
             dockerfile: ./services/Account Service/Dockerfile
-        ports: 
+        ports:
             -   ${USER_GROUP_PORT}:${USER_GROUP_PORT}
         restart: unless-stopped
     proxy:
-        build: 
+        build:
             context: backend/
             dockerfile: ./proxy/Dockerfile
-        ports: 
+        ports:
             -   "5000:5000"
         restart: unless-stopped
-
-
