All: Slimmed down Container size

--- a/backend/proxy/Dockerfile
+++ b/backend/proxy/Dockerfile
@@ -1,6 +1,6 @@
-#Author: Johannes Wimmer
+#Author: Johannes Wimmer, Lukas Pietzschmann
 
-FROM python:3.9
+FROM python:3.9-slim
 WORKDIR /app
 
 COPY ./requirements.txt requirements.txt
