--- a/backend/services/WikiHow Service/Dockerfile
+++ b/backend/services/WikiHow Service/Dockerfile
@@ -1,6 +1,6 @@
-#Author: Johannes Wimmer
+#Author: Johannes Wimmer, Lukas Pietzschmann
 
-FROM python:3.9
+FROM python:3.9-slim
 WORKDIR /app
 
 COPY ./requirements.txt requirements.txt
